# Zen-C

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  README_ES.md  README_IT.md  README_RU.md  README_ZH_CN.md  README_ZH_TW.md  STYLE.md  TODO.md  _tmp_comptime_1801125996.c  build.bat  build.zig  build_log.txt  build_log_2.txt  build_log_3.txt  compile_error.txt  compile_error_2.txt  cppcheck_output.txt  debug_output.txt  errors.txt  errors7.txt  errors9.txt  errors_ascii.txt  fail_test_out.txt  issue_234.zc  issue_reply.md  out.txt  parser_error.txt  patch_parser.py  repro.zc  (+17 more)
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  docs.yml  enforce_standards.yaml  labeler.yaml  lint.yaml  manual_test.yml  rosetta-sync.yml  stale.yaml  welcome.yaml  zen.yml
ape/: zc_entry.c
ape/boot/: .args  Makefile  boot.zc  hello.zc  instructions.txt
dev/bench/: data.js
docs/: PYTHON_INTEROP.md
docs/std/: README.md  bigint.md  bits.md  complex.md  crypto.md  cuda.md  encoding.md  env.md  fs.md  http-client-server.md  io.md  iter.md  json.md  map.md  math.md  mem.md  net.md  option.md  path.md  process.md  queue.md  random.md  regex.md  result.md  set.md  simd.md  slice.md  sort.md  stack.md  string.md  thread.md  time.md  utf8.md  vec.md
examples/: cpp_interop.zc
examples/algorithms/: dfs.zc  sieve.zc
examples/collections/: word_freq.zc
examples/data/: json_config.zc
examples/data_structures/: queue.zc  stack.zc
examples/features/: composition.zc  comptime_fib.zc  python_huggingface.zc  python_interop.zc  python_numpy.zc  showcase.zc
examples/gpu/: cuda-benchmark.zc  cuda_vector_add.zc
examples/graphics/: mandelbrot.zc  raylib_demo.zc
examples/llama/: README.md  basic_inference.zc  chat  chat.zc  deps.sh  gpu_inference.zc  sampling_demo.zc  setup.sh
examples/networking/: echo_server.zc
examples/process/: env.zc
examples/tools/: mini_grep.zc
examples/tui/: dashboard.zc  filebrowser.zc
fuzz/: harness.c
man/: zc.1
plugins/: befunge.c  befunge.zc  brainfuck.c  brainfuck.zc  forth.c  forth.zc  lisp.c  lisp.zc  regex.c  sql.c  sql.zc  zplugin_dynamic_compile_gnu.bat  zplugin_dynamic_compile_msvc.bat  zprep_plugin.h
src/: arena.h  compiler.h  compiler_config.h  constants.h  cscope.in.out  cscope.out  cscope.po.out  main.c  token.h  zprep.h
src/analysis/: comptime_interpreter.c  comptime_interpreter.h  const_fold.c  const_fold.h  move_check.c  move_check.h  typecheck.c  typecheck.c.bak  typecheck.h  typecheck_expr.c  typecheck_expr.h  typecheck_internal.h  typecheck_stmt.c  typecheck_stmt.h
src/ast/: ast.c  ast.h  primitives.c  primitives.h  symbols.c  symbols.h
src/codegen/: codegen.c  codegen.h  codegen_backend.h  codegen_backend_astdump.c  codegen_backend_c.c  codegen_backend_cpp.c  codegen_backend_cuda.c  codegen_backend_dot.c  codegen_backend_json.c  codegen_backend_lisp.c  codegen_backend_objc.c  codegen_decl.c  codegen_main.c  codegen_shared.c  codegen_shared.h  codegen_stmt.c  codegen_utils.c  compat.h
src/compat/: compat.h  compat_posix.c  compat_win32.c
src/diagnostics/: diagnostics.c  diagnostics.h
src/driver/: driver.c  driver.h
src/lexer/: token.c
src/lsp/: cJSON.c  json_rpc.c  json_rpc.h  json_rpc_error.c  lsp_analysis.c  lsp_formatter.c  lsp_formatter.h  lsp_index.c  lsp_index.h  lsp_main.c  lsp_project.c  lsp_project.h  lsp_semantic.c
src/misc/: zenc.json
src/parser/: parser.h  parser_core.c  parser_decl.c  parser_expr.c  parser_stmt.c  parser_struct.c  parser_type.c  parser_utils.c
src/platform/: arch.h  compiler.h  console.c  dylib.c  lang.h  misra.c  misra.h  os.c  os.h
src/plugins/: plugin_manager.c  plugin_manager.h  static_plugins.c
src/public/: zc_analysis.h  zc_codegen.h  zc_core.h  zc_diag.h  zc_driver.h  zc_utils.h
src/repl/: repl.c  repl.h  repl_commands.c  repl_eval.c  repl_highlight.c  repl_jit.c  repl_jit.h  repl_readline.c  repl_state.h
src/utils/: cmd.c  cmd.h  colors.c  colors.h  config.c  emitter.c  emitter.h  format_expr.c  format_expr.h  header2string.c  path_utils.c  path_utils.h  utils.c  utils.h  zalloc.h  zc_path_resolve.c  zc_path_resolve.h  zmap.h  zvec.h
src/zen/: zen_doc.c  zen_doc.h  zen_facts.c  zen_facts.h
std/: arena.zc  bigint.zc  complex.zc  core.zc  cuda.zc  debug.zc  env.zc  fs.zc  io.zc  iter.zc  json.zc  llama.zc  map.zc  mem.zc  net.zc  option.zc  path.zc  plugin.zc  process.zc  python.zc  queue.zc  regex.zc  result.zc  set.zc  sort.zc  stack.zc  string.zc  sync.zc  test.zc  thread.zc  vec.zc  z_platform.h  zc_fs_platform.h  zc_fs_posix.c  zc_fs_win32.c  zc_net_platform.h  zc_net_posix.c  zc_net_win32.c
std/crypto/: sha256.zc
std/encoding/: hex.zc
std/http/: client.zc  server.zc
std/net/: http.zc  url.zc
std/sys/: info.zc  mman.zc  signal.zc  stat.zc  user.zc
std/tui/: README.md  buffer.zc  event.zc  layout.zc  style.zc  terminal.zc  text.zc  widget.zc
tests/: DOCS.md  async_test.zc  run_codegen_tests.ps1  run_codegen_tests.sh  run_lsp_tests.sh  run_single.ps1  run_tests.cmd  run_tests.ps1  run_tests.py  run_tests.sh  test_bits.zc  test_complex.zc  test_lisp.zc  test_pad.zc  test_string_comparison.zc  test_string_matching.zc  test_string_op.zc  test_tabs.zc  verify_plugins.zc
tests/analysis/: test_move_nested_wrapper_double_consume.zc  test_move_string_use_after_move.zc  test_move_vec_string_double_consume.zc  test_move_wrapper_double_consume.zc  test_type_calls.zc  test_type_cast.zc  test_type_compat.zc  test_type_const_fold.zc  test_type_lifetime.zc  test_type_match.zc  test_type_misc.zc  test_type_move.zc  test_type_ops.zc  (+4 more)
translations/: CONTRIBUTING_ES.md  CONTRIBUTING_IT.md  CONTRIBUTING_PT_BR.md  CONTRIBUTING_RU.md  CONTRIBUTING_ZH_CN.md  CONTRIBUTING_ZH_TW.md  README_DE.md  README_ES.md  README_IT.md  README_PT_BR.md  README_RU.md  README_ZH_CN.md  README_ZH_TW.md
zenckly/: README.md  electron-main.js  index.html  package.json  preload.js
(+463 files in other folders)
